# GeneralsGameCode

./: CREDITS_SYSTEM.md  README.md  timestamp
.github/workflows/: build-toolchain.yml  do-release.yml  weekly-release.yml
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngine/Source/GameClient/GUI/GUICallbacks/Menus/: OptionsMenu.cpp
Generals/Code/Main/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/GUICallbacks/Menus/: OptionsMenu.cpp
GeneralsMD/Code/Main/: CMakeLists.txt
scripts/: generate-credits.py
